update new bench results

--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,9 @@
 \newif\ifeprint
 
 % temporarily set both to true
-\camerareadytrue
-% \camerareadyfalse
-\eprintfalse
+% \camerareadytrue
+\camerareadyfalse
+\eprinttrue
 % \eprintfalse
 
 %%% True definitions here:
@@ -129,8 +129,8 @@ We significantly improve upon the previously best known construction in this set
 \ifcameraready
 Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.
 \else
-Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.
-\gnote{Needs update}
+Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size around $135$ KB.
+%\gnote{Needs update}
 \fi
 We provide a full implementation of Chipmunk and provide extensive benchmarks studying our construction's efficiency.
 
