--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -25,28 +25,29 @@ to find concrete parameters that allow for instantiating Chipmunk based on a har
 We have used a fixed ring dimension $n = 512$.
 A selection of possible parameter choices is given in Table~\ref{tab:param}.
 
-% ┌──────────┬───────┬────────┬───────────┬───────────┬───────────┬─────────┬───────┬─────────┬──────────────┬──────────┬───────┬─────────────┬─────────┬─────────────┐
-% │   secpar │   tau │    rho │   epsilon │   alpha_w │   alpha_H │   delta │   phi │   gamma │   beta_sigma │   q_kots │   eta │   beta_open │   q_hvc │ size        │
-% ├──────────┼───────┼────────┼───────────┼───────────┼───────────┼─────────┼───────┼─────────┼──────────────┼──────────┼───────┼─────────────┼─────────┼─────────────┤
-% │      112 │    21 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25133 │  202753 │ 141.8750 KB │
-% │      112 │    21 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │    99 │      120108 │  962561 │ 159.3750 KB │
-% │      112 │    21 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      970665 │ 7790593 │ 186.8125 KB │
-% │      112 │    24 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25202 │  202753 │ 159.8750 KB │
-% │      112 │    24 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │    99 │      120438 │  964609 │ 179.6250 KB │
-% │      112 │    24 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      973331 │ 7790593 │ 210.4375 KB │
-% │      112 │    26 │   1024 │        15 │        16 │        37 │       1 │    13 │       6 │       775143 │  3168257 │    59 │       25243 │  202753 │ 171.8750 KB │
-% │      112 │    26 │   8192 │        15 │        16 │        37 │       1 │    16 │       6 │      2698381 │ 10872833 │   101 │      123098 │  995329 │ 193.1250 KB │
-% │      112 │    26 │ 131072 │        15 │        16 │        37 │       1 │    13 │       7 │      8803786 │ 35301377 │   199 │      974934 │ 7806977 │ 226.1875 KB │
-% │      128 │    21 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29276 │  249857 │ 143.1875 KB │
-% │      128 │    21 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32252 │  270337 │ 189.0000 KB │
-% │      128 │    21 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      182757 │ 1492993 │ 223.3750 KB │
-% │      128 │    24 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29357 │  249857 │ 161.1875 KB │
-% │      128 │    24 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32339 │  270337 │ 213.0000 KB │
-% │      128 │    24 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      183255 │ 1492993 │ 251.8750 KB │
-% │      128 │    26 │   1024 │        15 │        19 │        44 │       1 │     9 │       7 │       698123 │  2856961 │    63 │       29405 │  249857 │ 173.1875 KB │
-% │      128 │    26 │   8192 │        15 │        19 │        44 │       1 │     8 │       8 │      1761048 │  7114753 │    25 │       32392 │  270337 │ 229.0000 KB │
-% │      128 │    26 │ 131072 │        15 │        19 │        44 │       1 │     9 │       8 │      7924716 │ 31776769 │    35 │      183554 │ 1492993 │ 270.8750 KB │
-% └──────────┴───────┴────────┴───────────┴───────────┴───────────┴─────────┴───────┴─────────┴──────────────┴──────────┴───────┴─────────────┴─────────┴─────────────┘
+% ┌──────────┬───────┬────────┬───────────┬───────────┬───────┬───────────┬───────┬─────────┬──────────────┬──────────┬───────┬────────────┬─────────┬────────┐
+% │   secpar │   tau │    rho │ epsilon   │   alpha_w │   chi │   alpha_H │   phi │   gamma │   beta_sigma │       q' │   eta │   beta_agg │       q │ size   │
+% ├──────────┼───────┼────────┼───────────┼───────────┼───────┼───────────┼───────┼─────────┼──────────────┼──────────┼───────┼────────────┼─────────┼────────┤
+% │      112 │    21 │   1024 │ 1/65536   │        16 │    11 │        37 │    13 │       6 │       775143 │  3168257 │    29 │      25133 │  202753 │ 120 KB │
+% │      112 │    21 │   8192 │ 1/65536   │        16 │    11 │        37 │    16 │       6 │      2698381 │ 10872833 │    49 │     120108 │  962561 │ 135 KB │
+% │      112 │    21 │ 131072 │ 1/65536   │        16 │    11 │        37 │    13 │       7 │      8803786 │ 35301377 │    99 │     970665 │ 7790593 │ 158 KB │
+% │      112 │    24 │   1024 │ 1/65536   │        16 │    11 │        37 │    13 │       6 │       775143 │  3168257 │    29 │      25202 │  202753 │ 135 KB │
+% │      112 │    24 │   8192 │ 1/65536   │        16 │    11 │        37 │    16 │       6 │      2698381 │ 10872833 │    49 │     120438 │  964609 │ 152 KB │
+% │      112 │    24 │ 131072 │ 1/65536   │        16 │    11 │        37 │    13 │       7 │      8803786 │ 35301377 │    99 │     973331 │ 7790593 │ 178 KB │
+% │      112 │    26 │   1024 │ 1/65536   │        16 │    11 │        37 │    13 │       6 │       775143 │  3168257 │    29 │      25243 │  202753 │ 145 KB │
+% │      112 │    26 │   8192 │ 1/65536   │        16 │    11 │        37 │    16 │       6 │      2698381 │ 10872833 │    50 │     123098 │  995329 │ 163 KB │
+% │      112 │    26 │ 131072 │ 1/65536   │        16 │    11 │        37 │    13 │       7 │      8803786 │ 35301377 │    99 │     974934 │ 7806977 │ 191 KB │
+% │      128 │    21 │   1024 │ 1/65536   │        19 │    13 │        44 │     9 │       7 │       698123 │  2856961 │    31 │      29276 │  249857 │ 121 KB │
+% │      128 │    21 │   8192 │ 1/65536   │        19 │    13 │        44 │     8 │       8 │      1761048 │  7114753 │    12 │      32252 │  270337 │ 167 KB │
+% │      128 │    21 │ 131072 │ 1/65536   │        19 │    13 │        44 │     9 │       8 │      7924716 │ 31776769 │    17 │     182757 │ 1492993 │ 197 KB │
+% │      128 │    24 │   1024 │ 1/65536   │        19 │    13 │        44 │     9 │       7 │       698123 │  2856961 │    31 │      29357 │  249857 │ 136 KB │
+% │      128 │    24 │   8192 │ 1/65536   │        19 │    13 │        44 │     8 │       8 │      1761048 │  7114753 │    12 │      32339 │  270337 │ 188 KB │
+% │      128 │    24 │ 131072 │ 1/65536   │        19 │    13 │        44 │     9 │       8 │      7924716 │ 31776769 │    17 │     183255 │ 1492993 │ 222 KB │
+% │      128 │    26 │   1024 │ 1/65536   │        19 │    13 │        44 │     9 │       7 │       698123 │  2856961 │    31 │      29405 │  249857 │ 146 KB │
+% │      128 │    26 │   8192 │ 1/65536   │        19 │    13 │        44 │     8 │       8 │      1761048 │  7114753 │    12 │      32392 │  270337 │ 202 KB │
+% │      128 │    26 │ 131072 │ 1/65536   │        19 │    13 │        44 │     9 │       8 │      7924716 │ 31776769 │    17 │     183554 │ 1492993 │ 239 KB │
+% └──────────┴───────┴────────┴───────────┴───────────┴───────┴───────────┴───────┴─────────┴──────────────┴──────────┴───────┴────────────┴─────────┴────────┘
+
 \bgroup
 \setlength{\tabcolsep}{0.5em}
 \renewcommand{\arraystretch}{1.05}
@@ -68,29 +69,29 @@ A selection of possible parameter choices is given in Table~\ref{tab:param}.
   
   
       % &       &        &            &  &  \multicolumn{4}{c||}{HVC}  &  & \multicolumn{2}{c||}{KOTS}  & (Kilobytes) \\\hline\hline
-      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,133 &   202,753 & 142 \\%\cline{3-13}
-      &    21 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,108 &   962,561 & 160 \\%\cline{3-13}
-      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      970,665 & 7,790,593 & 187 \\\cline{2-14}
+      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,133 &   202,753 & 120 \\%\cline{3-13}
+      &    21 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,108 &   962,561 & 135 \\%\cline{3-13}
+      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      970,665 & 7,790,593 & 158 \\\cline{2-14}
   
-      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,202 &   202,753 & 160 \\%\cline{3-13}
-  112 &    24 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,438 &   964,609 & 180 \\%\cline{3-13}
-      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      973,331 & 7,790,593 & 211 \\\cline{2-14}
+      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,202 &   202,753 & 135 \\%\cline{3-13}
+  112 &    24 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,438 &   964,609 & 152 \\%\cline{3-13}
+      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      973,331 & 7,790,593 & 178 \\\cline{2-14}
   
-      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,243 &   202,753 & 172 \\%\cline{3-13}
-      &    26 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    50 &      123,098 &   995,329 & 194 \\%\cline{3-13}
-      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      974,934 & 7,806,977 & 227 \\\midrule
+      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,243 &   202,753 & 145 \\%\cline{3-13}
+      &    26 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    50 &      123,098 &   995,329 & 163 \\%\cline{3-13}
+      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      974,934 & 7,806,977 & 191 \\\midrule
   
-      &       &   1024 &         19 &        13 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,276 &   249,857 & 144 \\%\cline{3-13}
-      &    21 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,252 &   270,337 & 189 \\%\cline{3-13}
-      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      182,757 & 1,492,993 & 224 \\\cline{2-14}
+      &       &   1024 &         19 &        13 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,276 &   249,857 & 121 \\%\cline{3-13}
+      &    21 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,252 &   270,337 & 167 \\%\cline{3-13}
+      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      182,757 & 1,492,993 & 197 \\\cline{2-14}
   
-      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,357 &   249,857 & 162 \\%\cline{3-13}
-  128 &    24 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,339 &   270,337 & 213 \\%\cline{3-13}
-      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,255 & 1,492,993 & 252 \\\cline{2-14}
+      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,357 &   249,857 & 136 \\%\cline{3-13}
+  128 &    24 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,339 &   270,337 & 188 \\%\cline{3-13}
+      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,255 & 1,492,993 & 222 \\\cline{2-14}
   
-      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,405 &   249,857 & 174 \\%\cline{3-13}
-      &    26 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,392 &   270,337 & 229 \\%\cline{3-13}
-      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,554 & 1,492,993 & 271 \\\bottomrule
+      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,405 &   249,857 & 146 \\%\cline{3-13}
+      &    26 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,392 &   270,337 & 202 \\%\cline{3-13}
+      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,554 & 1,492,993 & 239 \\\bottomrule
     \end{tabular}
     \caption{Parameter sets for Chipmunk for a fixed ring dimension $n=512$.}\label{tab:param}
   \end{table}
