--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -51,8 +51,10 @@ In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor o
 For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $180$ KB large. \gnote{@Zhenfei:Double-Check}
 }
 \eprint{
-TODO
-\gnote{@Zheifei:Insert updated statement about performance metrics here}
+In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $4.8\times$, when compared to Squirrel.
+For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $135$ KB large. %\gnote{@Zhenfei:Double-Check}
+% TODO
+% \gnote{@Zhenfei:Insert updated statement about performance metrics here}
 }
 %The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
 %One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
