--- a/CCS-FINAL/sections/veccom.tex
+++ b/CCS-FINAL/sections/veccom.tex
@@ -364,7 +364,7 @@ Its commitments and openings are from $\modcommit = \ring_q$ and $\modopening = 
 
 \begin{figure*}
 \centering
-\begin{pchstack}[boxed]
+\begin{pchstack}[boxed,aboveskip=0pt,belowskip=0pt]
 \begin{pcvstack}
   \procedure{$\setup(\secparam)$}{\\[-1.2em]
     \vec{g} \gets \ring_{q}^{\xi\kappa'}\\ % NOTE: \ring_q rather than \ring_{q'} is correct here.
