Added encodings to technical overview

--- a/extraref.bib
+++ b/extraref.bib
@@ -134,3 +134,13 @@
   howpublished = "Cryptology ePrint Archive",
   note =         "\url{https://eprint.iacr.org/}",
 }
+
+
+@inproceedings{ESORICS:KatAki23,
+  title={Sequential Half-Aggregation of Lattice-Based Signatures},
+  author={Katharina Boudgoust and and Akira Takahashi},
+  booktitle={Computer Security-ESORICS 2023: 28th European Symposium on Research in Computer Security, The Hague, The Netherlands, September 25-29, 2023. Proceedings},
+  year={2023},
+  organization={Springer}
+}
+
