--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -139,4 +139,4 @@
 
 \newcommand*{\ENC}{\mathrm{enc}}
 \newcommand*{\DEC}{\mathrm{dec}}
-
+\newcommand{\myvdots}{\raisebox{.006\baselineskip}{\ensuremath{\vdots}}}
