--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -475,7 +475,7 @@ Let $\hvcplain = (\setup,\commit,\open,\iverify,\sverify, \wverify)$ be the HVC 
 Denote by $\modopening$ and $\modcommit$ the $\ring$-modules where the openings and commitments are from.
 Recall that $\modopening$ has the form $\modopening = \ring^\oplen$.
 
-We can then define and encoded version $\hvcencoded = (\setup',\commit',\open',\iverify',\sverify', \wverify')$ by simply encoding/decoding the openings as follows:
+We can then define an encoded version $\hvcencoded = (\setup',\commit',\open',\iverify',\sverify', \wverify')$ by simply encoding/decoding the openings as follows:
 \begin{description}
     \item[$\setup'(\secparam)$:] Identical to $\setup$.
     \item[$\commit'(\params, \vec{m})$:] Identical to $\commit$.
