--- a/sections/veccom.tex
+++ b/sections/veccom.tex
@@ -101,11 +101,9 @@ Finally, we require the commitments to be position binding.
 
 \subsection{Squirrel's Homomorphic Vector Commitment}\label{subsec:squirrelrecap}
 
-\begin{figure}[h]
-{
-\def\svgwidth{\textwidth}
-\input{squirreltree.pdf_tex}
-}
+\begin{figure}
+\centering
+\input{figures/tree}
 \caption{Squirrel's homomorphic vector commitment. The bottom 2 rows serve the purpose to commit to $\ring_{q'}$ elements rather than to short vectors of $\ring_q$- or $\ring$-elements. The equations on the right are the constraints that link the layers together, ignoring shortness constraints. Note that all layers but the bottom one must contain short elements.}\label{fig:squirreltree}
 \end{figure}
 
