Add %!TEX root remarks for certain editors and do so consistently.

--- a/sections/encoding.tex
+++ b/sections/encoding.tex
@@ -1,3 +1,4 @@
+% !TEX root = ../main.tex
 \section{Encoding HVC openings}\label{sect:efficientencoding}
 
 \gnote{This section just is not colored / versioned due to LaTeX issues I'm too lazy to solve. It is not present in the camera-ready version due to the \textbackslash input being conditional}
