--- a/sections/eth.tex
+++ b/sections/eth.tex
@@ -1,3 +1,4 @@
+% !TEX root = ../main.tex
 \section{Application to Ethereum}\label{sec:ethereum}
 
 \cameraready{This section (including this text itself) is not \textbackslash input'ed for the cameraready version -- color-coding this as with other text when compiling both versions does not work and I'm too lazy to fix the LaTeX for this.}
