--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 
 % temporarily set both to true
 % \camerareadytrue
-\camerareadyfalse
+\camerareadytrue
 \eprinttrue
 % \eprintfalse
 
@@ -126,12 +126,12 @@ Chipmunk allows for non-interactive aggregation of signatures and is secure agai
 The construction is plausibly secure against quantum adversaries as our security relies on the assumed hardness of the short integer solution problem.
 
 We significantly improve upon the previously best known construction in this setting by Fleischhacker, Simkin, and Zhang (CCS 2022).
-\ifcameraready
-Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.
-\else
+\cameraready{
+Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.}
+\eprint{
 Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size around $135$ KB.
-%\gnote{Needs update}
-\fi
+\gnote{Check}
+}
 We provide a full implementation of Chipmunk and provide extensive benchmarks studying our construction's efficiency.
 
 \end{abstract}
