--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -55,7 +55,7 @@ For keys that can generate $2^{24}$ signatures, an individual Chipmunk signature
 In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $4.8\times$, when compared to Squirrel.
 For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $135$ KB large. %\gnote{@Zhenfei:Double-Check}
 % TODO
-% \gnote{@Zhenfei:Insert updated statement about performance metrics here}
+\gnote{Correct statement about performance metrics here}
 }
 %The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
 %One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
@@ -102,12 +102,13 @@ While conceptually simple, we show that this change allows us to significantly r
 Given a Merkle tree, one can provide an opening for leaf $i$ by revealing all nodes that are adjacent to those on the path from leaf $i$ to the root.
 The nodes on the path can then be computed from the given information.
 Computing openings for the unaggregated homomorphic vector commitment construction of Squirrel as well as ours works essentially the same way.
-For Squirrel's and our aggregated vector commitments the situation is unfortunately different.
+For Squirrel's and our aggregated vector commitments, the situation is unfortunately different.
 Once we start aggregating trees or openings, we need to explicitly compute the nodes on the path and provide them as part of the aggregated opening, which doubles the size of our openings.
 
-In Chipmunk, we show present a new compression algorithm, inspired by Babai's nearest plane algorithm~\cite{DBLP:journals/combinatorica/Babai86}, which allows us to compress the size of our openings.
+In Chipmunk, we present a new compression algorithm, inspired by Babai's nearest plane algorithm~\cite{DBLP:journals/combinatorica/Babai86}, which allows us to compress the size of our openings.
 Instead of additionally sending the nodes on the path, we only send the adjacent nodes and some small hints, which allow us reconstruct all needed node values.
 We believe that this technique may be of independent interest and could find applications outside of our construction.
+\gnote{TODO: Review reference to Babai}
 
 
 \paragraph{Chipmunk Multi-Signatures.}
@@ -127,5 +128,6 @@ While each individual improvement may seem conceptually simple, they all add up 
 \paragraph{New Results in Full Version.}
 We note that the full version of this paper contains a new result, namely the encoding of vector commitment openings, which is not present in our CCS 2023 proceedings version of this paper.
 This new result improves our signature sizes by roughly a factor of $1/3$, when compared with the aggregate signature sizes we achieved in our proceedings paper.
+\eprint{You are currently reading the full version.}
 
 
